force-app/main/default/objects/Operation_Hours__c/Operation_Hours__c.object-meta.xml
<CustomObject>
    <description>Custom Object to house the Operation Hours of Sites, to dynamically expose them to the Grower&apos;s Portal</description>
    <label>Operation Hours</label>
    <nameField>
        <label>Operation Hours Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operation Hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>