force-app/main/default/objects/Operation_Hours__c/fields/Closed__c.field-meta.xml
<CustomField>
    <fullName>Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if a Site will be closed on this specific day, default unchecked, managed from within SF</description>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>