force-app/main/default/objects/Operation_Hours__c/fields/Closing_Time__c.field-meta.xml
<CustomField>
    <fullName>Closing_Time__c</fullName>
    <description>Time field to indicate the closing time of the Site, managed from within SF.</description>
    <label>Closing Time</label>
    <type>Time</type>
</CustomField>