force-app/main/default/objects/Operation_Hours__c/fields/Open_Time__c.field-meta.xml
<CustomField>
    <fullName>Open_Time__c</fullName>
    <description>Time field to indicate the opening time of the Site, managed from within SF.</description>
    <label>Open Time</label>
    <type>Time</type>
</CustomField>