force-app/main/default/objects/Operation_Hours__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <description>Master-Detail to indicate which Site the Operation hours is referring to, managed from within SF.</description>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Operation Hours</relationshipLabel>
    <relationshipName>Operation_Hours</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>